--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@3rdweb/hooks": "^1.9.2",
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@thirdweb-dev/react": "^3.6.3",
+    "@thirdweb-dev/sdk": "^3.6.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -22,6 +22,7 @@
     "bootstrap": "^5.2.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "ethers": "^5.7.2",
     "framer-motion": "^7.6.12",
     "next": "13.0.3",
     "react": "18.2.0",
