--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.5",
+    "react-icons": "^4.7.1",
     "sass": "^1.56.1",
     "sharp": "^0.31.2",
     "typescript": "4.8.4"
