Fix bootAlert , (Interface nft not complete)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "Appcontacs",
+        "Iburnalble",
+        "Pausable",
         "PUBLICK",
         "titleform"
     ]
