--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.0.3",
     "ethers": "^5.7.2",
     "framer-motion": "^7.6.12",
+    "json5": "^2.2.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
